--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Hellow Coursera</title>
   </head>
   <body>
-    <h1>Hellow Coursera</h1>
+    <h1>Hellow Coursera students !</h1>
   </body>
 </html>
